[gd_scene load_steps=2 format=3 uid="uid://s60nu86dvi77"]

[ext_resource type="Script" path="res://Playground/Math/lerp.gd" id="1_plok4"]

[node name="Lerp" type="Node"]
script = ExtResource("1_plok4")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
offset_left = 151.0
offset_top = 54.0
offset_right = 422.0
offset_bottom = 94.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "from"

[node name="FromBox" type="SpinBox" parent="HBoxContainer2/HBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.001

[node name="Label2" type="Label" parent="HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "PI"

[node name="Control" type="Control" parent="HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "to"

[node name="ToBox" type="SpinBox" parent="HBoxContainer2/HBoxContainer2"]
layout_mode = 2
max_value = 2.0
step = 0.001
value = 2.0

[node name="Label2" type="Label" parent="HBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "PI"

[node name="HSlider" type="HSlider" parent="."]
offset_left = 177.0
offset_top = 113.0
offset_right = 651.0
offset_bottom = 169.0
max_value = 1.0
step = 0.001

[node name="Hand1" type="ColorRect" parent="."]
offset_left = 458.0
offset_top = 384.0
offset_right = 658.0
offset_bottom = 385.0
color = Color(1, 0, 0, 1)

[node name="Hand2" type="ColorRect" parent="."]
offset_left = 458.0
offset_top = 384.0
offset_right = 658.0
offset_bottom = 385.0
color = Color(0, 0, 1, 1)

[connection signal="value_changed" from="HBoxContainer2/HBoxContainer/FromBox" to="." method="_on_from_box_value_changed"]
[connection signal="value_changed" from="HBoxContainer2/HBoxContainer2/ToBox" to="." method="_on_to_box_value_changed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
